# find_applicable_talent

./: .gitignore  Makefile  README.md  pyproject.toml
backend/: candidates.py  dynamic_candidate_filter.py  main.py
backend/util/: logger.py
front_end/front_end/: package-lock.json  package.json
front_end/front_end/components/: candidate-panel.tsx
front_end/front_end/lib/: data.ts  types.ts
src/find_applicable_talent/: __init__.py  test.py  version.txt
src/find_applicable_talent/backend/: __init__.py  candidates.py  dynamic_candidate_filter.py  main.py
src/find_applicable_talent/backend_interface/: main.py
src/find_applicable_talent/core/: candidate.py  candidate_list.py  dynamic_candidate_filter.py  round_robin_candidates.py
src/find_applicable_talent/reasoning_interface/: async_rate_limited_dispatcher.py
src/find_applicable_talent/reasoning_interface/formatters/: __init__.py  prompt_builders.py  response_parsers.py
src/find_applicable_talent/reasoning_interface/model_interfaces/: __init__.py  anthropic_model.py  model_interface.py
src/find_applicable_talent/util/: logger.py  path_sourcing.py
src/front_end/front_end/: package-lock.json  package.json
src/front_end/front_end/app/: globals.css  layout.tsx  page.tsx
src/front_end/front_end/app/intelligentFiltering/: page.tsx
src/front_end/front_end/app/selected/: page.tsx
src/front_end/front_end/components/: candidate-dialog.tsx  candidate-grid.tsx  candidate-panel.tsx  filter-builder.tsx  role-builder.tsx  role-viewer.tsx
src/front_end/front_end/lib/: paths_util.ts  types.ts
(+4 files in other folders)
